# cleytin_fw

./: .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
bootloader_components/main/: CMakeLists.txt  Kconfig  bootloader_start.c
components/cleytin_commons/: CMakeLists.txt  cleytin_commons.c  cleytin_commons.cpp
components/cleytin_commons/include/: cleytin_commons.h
components/cleytin_engine/: CMakeLists.txt  ce_8x12_font.cpp  ce_bitmap.cpp  ce_canvas_tftlcd_320x240.cpp  ce_circle.cpp  ce_colorful_bitmap.cpp  ce_container.cpp  ce_font.cpp  ce_menu_helper.cpp  ce_rectangle.cpp  ce_text.cpp  cleytin_controls.cpp  cleytin_engine.cpp  cleytin_lcd_api.cpp  cleytin_sdcard.cpp  cleytin_tftlcd_api.cpp
components/cleytin_engine/include/: ce_8x12_font.h  ce_bitmap.h  ce_circle.h  ce_colorful_bitmap.h  ce_container.h  ce_font.h  ce_menu_helper.h  ce_rectangle.h  ce_text.h  cleytin_controls.h  cleytin_engine.h  cleytin_lcd_api.h  cleytin_sdcard.h  cleytin_tftlcd_api.h
main/: CMakeLists.txt  cleytin_fw_main.c  cleytin_fw_main.cpp  cleytin_storage.c  cleytin_storage.cpp  fwfun_about.cpp  fwfun_sdcard.cpp  fwfun_startgame.cpp  fwfun_test.cpp
main/include/: cleytin_storage.h  fwfun_about.h  fwfun_sdcard.h  fwfun_startgame.h  fwfun_test.h
